--- a/asciidocs/slides/telemetry.adoc
+++ b/asciidocs/slides/telemetry.adoc
@@ -34,106 +34,6 @@ endif::[]
 :title-slide-transition-speed: fast
 
 Grundlagen, Micrometer und Abgrenzung zu Tracing
-//
-// == Slide w/ image
-//
-// [.stretch]
-// image::architecture-micrometer-prometheus.png[]
-//
-// [.lightbg,background-opacity="0.7"]
-// == Slide w/ text and background image
-//
-// image::architecture-micrometer-prometheus.png[background, size="contain"]
-//
-//
-// * Topic 1
-// * Topic 2
-// * Topic 3
-//
-// [%auto-animate]
-// == !
-//
-// Matched element will be animated automatically!
-//
-// [%auto-animate]
-// == !
-//
-// [.highlight]
-// Matched element will be animated automatically!
-//
-// And move to the right position!
-//
-// [%hardbreaks]
-// ⬆️
-// ⬆️
-// ⬆️
-//
-//
-// [%auto-animate]
-// == !
-//
-// [source%linenums,js,data-id=planets]
-// ----
-// let planets = [
-//   { name: 'mars', diameter: 6779 },
-// ]
-// ----
-//
-// [%auto-animate]
-// == !
-//
-// [source%linenums,js,data-id=planets]
-// ----
-// let planets = [
-//   { name: 'mars', diameter: 6779 },
-//   { name: 'earth', diameter: 12742 },
-//   { name: 'jupiter', diameter: 139820 }
-// ]
-// ----
-//
-// [%auto-animate]
-// == !
-//
-// [source%linenums,js,data-id=planets]
-// ----
-// let circumferenceReducer = ( c, planet ) => {
-//   return c + planet.diameter * Math.PI;
-// }
-//
-// let planets = [
-//   { name: 'mars', diameter: 6779 },
-//   { name: 'earth', diameter: 12742 },
-//   { name: 'jupiter', diameter: 139820 }
-// ]
-//
-// let c = planets.reduce( circumferenceReducer, 0 )
-// ----
-//
-//
-// [%auto-animate,auto-animate-unmatched=false]
-// == Unmatched
-//
-// Introduction. (matched)
-//
-// [%auto-animate,auto-animate-unmatched=false]
-// == Unmatched
-//
-// Introduction. (matched)
-//
-// This will be shown instantly ⚡ (unmatched)
-//
-//
-// [%auto-animate,auto-animate-duration=5]
-// == Duration
-//
-// This animation...
-//
-// [%auto-animate,auto-animate-duration=5]
-// == Duration
-//
-// This animation...
-//
-// ...will take 5 seconds! ⌚
 
 == Einleitung
 
@@ -141,7 +41,7 @@ Grundlagen, Micrometer und Abgrenzung zu Tracing
 
 * Aufgabenstellung
 ** Fehlerquellen identifizieren
-** Performance optimieren.
+** Performance optimieren
 * Herausforderungen
 ** Komplexe Anwendungen (Microservices, verteilte Systeme).
 ** Mangelnde Übersicht und fehlende Kennzahlen.
@@ -328,15 +228,9 @@ Tracing).
 * Tracing:
 - Details zu einem spezifischen Request durch mehrere Microservices.
 
-== OpenTelemetry vs OpenTracing
+== Live Demo: Tracing mit Jaeger
 
-* OpenTracing:
-- Nur Tracing, Standard für verteilte Systeme.
-* OpenTelemetry:
-- Nachfolger, umfasst Tracing, Metriken und Logs.
-- Wachsende Unterstützung in der Community.
-
-== Demonstration im Kubernetes-Cluster
+image::architecture-jaeger.png[]
 
 === Schritt 1: Minikube starten
 
@@ -393,3 +287,12 @@ http://localhost:16686
 
 http://localhost:9000
 
+== Fazit
+
+* Telemetrie: Sammlung von Metriken, Logs und Events.
+Verwendung in k8s-Cluster um einen Überblick über den Systemzustand zu erhalten.
+* Tracing: Einzelne Requests können nachverfolgt, und analysiert werden.
+
+== Danke für eure Aufmerksamkeit!
+
+ im
