--- a/asciidocs/slides/telemetry.adoc
+++ b/asciidocs/slides/telemetry.adoc
@@ -33,269 +33,331 @@ endif::[]
 :title-slide-transition: zoom
 :title-slide-transition-speed: fast
 
-Grundlagen, Micrometer und Abgrenzung zu Tracing
+Teil 2: Tracing
 
-== Einleitung
+//
+// == Einleitung
+//
+// === Welches Problem gibt es?
+//
+// * Aufgabenstellung
+// ** Fehlerquellen identifizieren
+// ** Performance optimieren
+// * Herausforderungen
+// ** Analyse von komplexen Anwendungen (z.B.: k8s).
+// ** Mangelnde Übersicht und fehlende Kennzahlen.
+//
+// === Was ist Telemetrie?
+//
+// * Definition: Automatische Sammlung von Metriken, Logs und Events.
+// * Aufgabe: Systemzustand analysieren und optimieren.
+// * Bestandteile: Metriken (Zähler, Timer), Logs, Tracing.
+//
+// === Wie Telemetrie dieses Problem löst
+//
+// * Einblicke in Systemzustände.
+// * Erleichtert Fehlerdiagnose und Performance-Monitoring.
+// ** Option einer grafischen Darstellung
+// ** Automatisierte Alarme und Benachrichtigungen.
+//
+// === Beispiel: Kubernetes-Cluster
+//
+// * Metriken: CPU- und Speicherauslastung.
+// * Logs: Fehlermeldungen und Debug-Informationen.
+// * Tracing
+// ** Nachverfolgung von Request durch verschiedene Services. https://medium.com/@stackify1/demystifying-observability-telemetry-logs-distributed-tracing-and-monitoring-vs-logging-8f0b972259f7[(request-flows)]
+// ** Bottlenecks identifizieren
+//
+// == Micrometer
+//
+// === Was ist Micrometer?
+//
+// * Java-basierte Bibliothek für Metrik-Sammlung.
+// ** https://quarkus.io/guides/telemetry-micrometer[Wird in der offiziellen Quarkus-Dokumentation empfohlen.]
+// * Unterstützt verschiedene Metrik-Typen (Zähler, Timer, Histogramm).
+// * https://prometheus.io/[Prometheus-kompatibel.]
+// ** https://prometheus.io/docs/prometheus/latest/storage/[Sammelt und speichert die Metriken entweder im RAM oder in einer Time Series Database.]
+//
+// === Micrometer in der Praxis
+//
+// * Integration mit Quarkus:
+// - Einfaches Hinzufügen durch Erweiterungen (`micrometer-registry-prometheus`).
+// - Erfassung von JVM-Metriken (Heap, Garbage Collection, Threads).
+// * Visualisierung: Daten an Prometheus senden, mit Grafana anzeigen.
+//
+// === Live Demo: Micrometer in Quarkus
+//
+// image::architecture-prometheus-grafana.png[]
+//
+// https://exceptionly.com/2022/01/18/monitoring-quarkus-with-prometheus-and-grafana/
+//
+// === Schritt 1: Micrometer in Quarkus einbinden
+//
+// `quarkus-micrometer-prometheus`-Dependency hinzufügen.
+//
+// === Schritt 2: Metriken sammeln
+//
+// https://www.baeldung.com/quarkus-micrometer[Eigene Metriken definieren.]
+//
+// [source,java]
+// ----
+// @Path("/palindrome")
+// @Produces("application/json")
+// public class PalindromeResource {
+//     private final MeterRegistry registry;
+//     private final LinkedList<String> list = new LinkedList<>();
+//
+//     public PalindromeResource(MeterRegistry registry) {
+//         this.registry = registry;
+//         registry.gaugeCollectionSize("palindrome.list.size", Tags.empty(), list);
+//     }
+//
+//     @GET
+//     @Path("counter/check/{input}")
+//     public boolean checkPalindromeCounter(@PathParam("input") String input) {
+//         list.add(input);
+//
+//         registry.counter("palindrome.counter").increment();
+//         boolean result = internalCheckPalindrome(input);
+//         return result;
+//     }
+//
+//     @GET
+//     @Path("timer/check/{input}")
+//     public boolean checkPalindromeAndTimer(@PathParam("input") String input) {
+//         list.add(input);
+//
+//         Timer.Sample sample = Timer.start(registry);
+//         boolean result = internalCheckPalindrome(input);
+//         sample.stop(registry.timer("palindrome.timer"));
+//         return result;
+//     }
+//
+//     private boolean internalCheckPalindrome(String input) {
+//         int left = 0;
+//         int right = input.length() - 1;
+//
+//         while (left < right) {
+//             if (input.charAt(left) != input.charAt(right)) {
+//                 return false;
+//             }
+//             left++;
+//             right--;
+//         }
+//         return true;
+//     }
+//
+//     @DELETE
+//     @Path("empty-list")
+//     public void emptyList() {
+//         list.clear();
+//     }
+// }
+// ----
+//
+// === Schritt 3: Package erstellen
+//
+// [source,bash]
+// ----
+// mvn package
+// ----
+//
+// === Schritt 4: Container mit Quarkus, Prometheus und Grafana starten
+//
+// [source,yaml]
+// ----
+// services:
+//   prometheus:
+//     image: prom/prometheus:latest
+//     container_name: prometheus
+//     volumes:
+//       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+//     ports:
+//       - "9090:9090"
+//     restart: always
+//     networks:
+//       - monitoring
+//
+//   grafana:
+//     image: grafana/grafana:latest
+//     container_name: grafana
+//     ports:
+//       - "3000:3000"
+//     restart: always
+//     networks:
+//       - monitoring
+//
+//   quarkus:
+//     build:
+//       context: ../../../
+//       dockerfile: ./src/main/docker/Dockerfile.jvm
+//     container_name: quarkus
+//     ports:
+//       - "8080:8080" # Optional, for host access
+//     restart: always
+//     networks:
+//       - monitoring
+//
+// networks:
+//   monitoring:
+//     driver: bridge
+// ----
+//
+// === Schritt 5: Prometheus
+//
+// http://localhost:9090
+//
+// === Schritt 6: Grafana
+//
+// http://localhost:3000
+//
+// === Alternativen zu Micrometer
+//
+// * Dropwizard Metrics:
+// - Älter, weniger flexibel.
+// * Spring Boot Actuator (eingebaut, aber weniger universell).
+// * OpenTelemetry (vollständige Lösung für Telemetrie inkl.
+// Tracing).
+//
+// == Abgrenzung zu Tracing
+//
+// === Theorie
+//
+// * Telemetrie: Sammlung von Metriken, Logs und Events.
+// * Tracing: Nachverfolgung von Requests durch verschiedene Services.
+//
+// === Beispiel
+//
+// * Telemetrie:
+// - Durchschnittliche Antwortzeit eines Services.
+// * Tracing:
+// - Details zu einem spezifischen Request durch mehrere Microservices.
+
+== Tracing
 
 === Welches Problem gibt es?
 
-* Aufgabenstellung
-** Fehlerquellen identifizieren
-** Performance optimieren
-* Herausforderungen
-** Analyse von komplexen Anwendungen (z.B.: k8s).
-** Mangelnde Übersicht und fehlende Kennzahlen.
+* Identifizierung von Performance-Problemen
+* Bottleneck identifizieren
+* Warum dauert ein Request so lange?
 
-=== Was ist Telemetrie?
+=== Was ist Tracing?
 
-* Definition: Automatische Sammlung von Metriken, Logs und Events.
-* Aufgabe: Systemzustand analysieren und optimieren.
-* Bestandteile: Metriken (Zähler, Timer), Logs, Tracing.
+* Nachverfolgung von Requests auf der Seite des Servers
+* Analyse von vielen Requests
+* Zeit zwischen einzelnen Schritten messen
 
-=== Wie Telemetrie dieses Problem löst
+=== Was ist ein Trace?
 
-* Einblicke in Systemzustände.
-* Erleichtert Fehlerdiagnose und Performance-Monitoring.
-** Option einer grafischen Darstellung
-** Automatisierte Alarme und Benachrichtigungen.
+image::spans-traces.png[spans-traces]
 
-=== Beispiel: Kubernetes-Cluster
+=== Daten Sammeln mit OpenTelemetry
 
-* Metriken: CPU- und Speicherauslastung.
-* Logs: Fehlermeldungen und Debug-Informationen.
-* Tracing
-** Nachverfolgung von Request durch verschiedene Services. https://medium.com/@stackify1/demystifying-observability-telemetry-logs-distributed-tracing-and-monitoring-vs-logging-8f0b972259f7[(request-flows)]
-** Bottlenecks identifizieren
+OpenTelemetry ist ein Open-Source-Framework zur Sammlung und Verarbeitung von Metriken, Logs und Traces für Observability in modernen Anwendungen.
 
-== Micrometer
-
-=== Was ist Micrometer?
-
-* Java-basierte Bibliothek für Metrik-Sammlung.
-** https://quarkus.io/guides/telemetry-micrometer[Wird in der offiziellen Quarkus-Dokumentation empfohlen.]
-* Unterstützt verschiedene Metrik-Typen (Zähler, Timer, Histogramm).
-* https://prometheus.io/[Prometheus-kompatibel.]
-** https://prometheus.io/docs/prometheus/latest/storage/[Sammelt und speichert die Metriken entweder im RAM oder in einer Time Series Database.]
-
-=== Micrometer in der Praxis
-
-* Integration mit Quarkus:
-- Einfaches Hinzufügen durch Erweiterungen (`micrometer-registry-prometheus`).
-- Erfassung von JVM-Metriken (Heap, Garbage Collection, Threads).
-* Visualisierung: Daten an Prometheus senden, mit Grafana anzeigen.
-
-=== Live Demo: Micrometer in Quarkus
-
-image::architecture-prometheus-grafana.png[]
-
-https://exceptionly.com/2022/01/18/monitoring-quarkus-with-prometheus-and-grafana/
-
-=== Schritt 1: Micrometer in Quarkus einbinden
-
-`quarkus-micrometer-prometheus`-Dependency hinzufügen.
-
-=== Schritt 2: Metriken sammeln
-
-https://www.baeldung.com/quarkus-micrometer[Eigene Metriken definieren.]
-
-[source,java]
-----
-@Path("/palindrome")
-@Produces("application/json")
-public class PalindromeResource {
-    private final MeterRegistry registry;
-    private final LinkedList<String> list = new LinkedList<>();
-
-    public PalindromeResource(MeterRegistry registry) {
-        this.registry = registry;
-        registry.gaugeCollectionSize("palindrome.list.size", Tags.empty(), list);
-    }
-
-    @GET
-    @Path("counter/check/{input}")
-    public boolean checkPalindromeCounter(@PathParam("input") String input) {
-        list.add(input);
-
-        registry.counter("palindrome.counter").increment();
-        boolean result = internalCheckPalindrome(input);
-        return result;
-    }
-
-    @GET
-    @Path("timer/check/{input}")
-    public boolean checkPalindromeAndTimer(@PathParam("input") String input) {
-        list.add(input);
-
-        Timer.Sample sample = Timer.start(registry);
-        boolean result = internalCheckPalindrome(input);
-        sample.stop(registry.timer("palindrome.timer"));
-        return result;
-    }
-
-    private boolean internalCheckPalindrome(String input) {
-        int left = 0;
-        int right = input.length() - 1;
-
-        while (left < right) {
-            if (input.charAt(left) != input.charAt(right)) {
-                return false;
-            }
-            left++;
-            right--;
-        }
-        return true;
-    }
-
-    @DELETE
-    @Path("empty-list")
-    public void emptyList() {
-        list.clear();
-    }
-}
-----
-
-=== Schritt 3: Package erstellen
-
-[source,bash]
-----
-mvn package
-----
-
-=== Schritt 4: Container mit Quarkus, Prometheus und Grafana starten
-
-[source,yaml]
-----
-services:
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    restart: always
-    networks:
-      - monitoring
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    restart: always
-    networks:
-      - monitoring
-
-  quarkus:
-    build:
-      context: ../../../
-      dockerfile: ./src/main/docker/Dockerfile.jvm
-    container_name: quarkus
-    ports:
-      - "8080:8080" # Optional, for host access
-    restart: always
-    networks:
-      - monitoring
-
-networks:
-  monitoring:
-    driver: bridge
-----
-
-=== Schritt 5: Prometheus
-
-http://localhost:9090
-
-=== Schritt 6: Grafana
-
-http://localhost:3000
-
-=== Alternativen zu Micrometer
-
-* Dropwizard Metrics:
-- Älter, weniger flexibel.
-* Spring Boot Actuator (eingebaut, aber weniger universell).
-* OpenTelemetry (vollständige Lösung für Telemetrie inkl.
-Tracing).
-
-== Abgrenzung zu Tracing
-
-=== Theorie
-
-* Telemetrie: Sammlung von Metriken, Logs und Events.
-* Tracing: Nachverfolgung von Requests durch verschiedene Services.
-
-=== Beispiel
-
-* Telemetrie:
-- Durchschnittliche Antwortzeit eines Services.
-* Tracing:
-- Details zu einem spezifischen Request durch mehrere Microservices.
-
-== Live Demo: Tracing mit Jaeger
+== LiveDemo: LeoVote - Tracing mit Jaeger
 
 image::jaeger-logo.png[jaeger-logo,width=200]
 
-=== Schritt 1: Minikube starten
+=== Tracing in Quarkus
 
-[sources,bash]
+==== OpenTelemetry
+
+OpenTelemetry ist ein Open-Source-Framework zur Sammlung und Verarbeitung von:
+
+* Metriken
+* Logs
+* Traces
+
+=== OpenTelemetry Tracing in Quarkus
+
+==== Dependencies
+
+[source,xml]
 ----
-minikube start --cpus=4 --memory=8g --driver=docker
-----
-
-=== Schritt 2: Jaeger installieren
-
-Falls noch nicht vorhanden, Git-Repository klonen.
-
-[sources,bash]
-----
-git clone https://github.com/jaegertracing/jaeger.git
-----
-
-In den Pfad `jaeger/examples/hotrod/kubernetes/base` wechseln.
-
-[sources,bash]
-----
-cd jaeger/examples/hotrod/kubernetes/base
-----
-
-=== Schritt 3: Jaeger starten
-
-[sources,bash]
-----
-kubectl apply -k ./jaeger-all-in-one
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-opentelemetry</artifactId>
+</dependency>
+<dependency>
+    <groupId>io.opentelemetry.instrumentation</groupId>
+    <artifactId>opentelemetry-jdbc</artifactId>
+</dependency>
 ----
 
-=== Schritt 4: HotROD-Beispiel starten
+==== Application.properties
 
-[sources,bash]
+[source,yaml]
 ----
-kubectl apply -k ./hotrod
-----
+# Enable OpenTelemetry tracing
 
-=== Schritt 5: Port-Forwarding
+quarkus.otel.exporter.otlp.endpoint=http://localhost:4317
 
-[sources,bash]
-----
-kubectl port-forward service/jaeger 16686:16686
-----
+quarkus.otel.traces.sampler=always_on
 
-[sources,bash]
-----
-kubectl port-forward service/example-hotrod 9000:8080
+quarkus.otel.service.name=quarkus-backend
+
+# For JDBC telemetry
+quarkus.datasource.jdbc.telemetry=true
 ----
 
-=== Schritt 6: Jaeger-UI öffnen
+==== Jaeger Tracing
 
-http://localhost:16686
+[source,yaml]
+----
+apiVersion: jaegertracing.io/v1
+kind: Jaeger
+metadata:
+  name: simplest
+----
 
-http://localhost:9000
+=== Live Demo
 
-== Fazit
+LeoVote
 
-* Telemetrie: Sammlung von Metriken, Logs und Events.
-Verwendung in k8s-Cluster um einen Überblick über den Systemzustand zu erhalten.
-* Tracing: Einzelne Requests können nachverfolgt, und analysiert werden.
+=== Custom Span
+
+[source,java]
+----
+public Uni<Response> sendInvite(@PathParam("electionId") Long electionId) {
+Span span = tracer.spanBuilder("sendEmails").startSpan();
+
+        Optional<Election> election = Election.findByIdOptional(electionId);
+
+        if (election.isEmpty()) {
+            return Uni.createFrom().item(Response.status(Response.Status.NOT_FOUND).build());
+        }
+
+        try (Scope scope = span.makeCurrent()) {
+
+            // Perform email sending logic in a background task
+            emailService.sendInvitations(election.get()).subscribe().with(
+                    success -> System.out.println("Emails sent successfully"),
+                    failure -> System.out.println("Emails could not be sent\n" + failure.toString())
+            );
+        } finally {
+            span.end();
+        }
+
+        return Uni.createFrom().item(Response.ok().entity("{\"message\": \"Emails are being sent asynchronously.\"}").build());
+    }
+----
+
+=== Jaeger in Docker
+
+[source,bash]
+----
+docker run -d --name jaeger \
+  -e COLLECTOR_ZIPKIN_HTTP_PORT=9411 \
+  -p 5775:5775/udp \
+  -p 6831:6831/udp \
+  -p 6832:6832/udp \
+  -p 5778:5778 \
+  -p 16686:16686 \
+  -p 14268:14268 \
+  -p 9411:9411 \
+  jaegertracing/all-in-one:1.6.0
+----
 
 == Danke für eure Aufmerksamkeit!
 
