fix missing images in index.adoc

--- a/asciidocs/docs/index.adoc
+++ b/asciidocs/docs/index.adoc
@@ -1,6 +1,12 @@
-= Tracing Erklärung
+= Telemetrie
 :toc:
 :icons: font
+ifdef::env-ide[]
+:imagesdir: ../images
+endif::[]
+ifndef::env-ide[]
+:imagesdir: images
+endif::[]
 
 == Einleitung
 
